cambios en readme

--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
+  "description": "## ✨ Objetivo del Proyecto",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/miguelbac/crud-project.git"
+  },
+  "bugs": {
+    "url": "https://github.com/miguelbac/crud-project/issues"
+  },
+  "homepage": "https://github.com/miguelbac/crud-project#readme",
+  "devDependencies": {
     "json-server": "^1.0.0-beta.3"
   }
 }
